--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -43,6 +43,7 @@
       width: auto
       padding: 0 0 0 20px
       text-align: left
+      height: auto
     .icon
       float: left
       width: 16px
@@ -75,7 +76,9 @@
   display: none !important
 
 .home-icon.editing
-  background-color: #DDEF34 !important
+  background: url(/images/ui/highlight.png) no-repeat 0px 2px !important
+  .title
+    background: #3658FF
 
 .home-icon.invalid
   background-color: #E83D05
