--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -98,7 +98,7 @@ body
 .home-icon
   float: left
   width: 75px
-  height: 115px
+  height: 98px
   .inner
     padding: 7.5px 5.5px 7.5px 5.5px
   .icon
@@ -109,9 +109,12 @@ body
       cursor: pointer
   .title
     width: 64px
+    height: 26px
+    overflow: hidden
     text-align: center
     font-size: 11px
     word-wrap: break-word
+    font-weight: bold
 
 #templates
   display: none
