--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -98,7 +98,7 @@ body
 .home-icon
   float: left
   width: 75px
-  height: 98px
+  height: 102px
   .inner
     padding: 7.5px 5.5px 7.5px 5.5px
   .icon
@@ -109,12 +109,13 @@ body
       cursor: pointer
   .title
     width: 64px
-    height: 26px
+    line-height: 1.2em
+    height: 2.4em
     overflow: hidden
     text-align: center
     font-size: 11px
     word-wrap: break-word
-    font-weight: bold
+    //font-weight: bold
 
 #templates
   display: none
