--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -38,10 +38,11 @@
     width: 150px
     height: auto
     padding: 2px 0 2px 5px
+    margin: 0
     cursor: pointer
     .title
       width: auto
-      padding: 0 0 0 20px
+      padding: 1px 0 0 4px
       text-align: left
       height: auto
     .icon
@@ -76,8 +77,9 @@
   display: none !important
 
 .home-icon.editing
-  background: url(/images/ui/highlight.png) no-repeat 0px 2px !important
+  background: url(/images/ui/highlight.png) no-repeat 4px 2px !important
   .title
+    color: #fff
     background: #3658FF
 
 .home-icon.invalid
