--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -73,8 +73,8 @@ body
 
 .ad-bar
   padding: 4px 0
-  border-top: 4px solid #fff
-  border-bottom: 4px solid #fff
+  border-top: 2px solid $secondary-color
+  border-bottom: 2px solid $secondary-color
   background: $color-topbar
   text-align: center
 
@@ -102,8 +102,9 @@ body
   .inner
     padding: 7.5px 5.5px 7.5px 5.5px
   .icon
-    width: 64px
-    height: 64px
+    width: 57px
+    height: 57px
+    margin: 0 auto 4px auto
     background: no-repeat
     &:hover
       cursor: pointer
@@ -115,7 +116,6 @@ body
     text-align: center
     font-size: 11px
     word-wrap: break-word
-    //font-weight: bold
 
 #templates
   display: none
