--- a/app/views/signup/_signup-step-arrows.slim
+++ b/app/views/signup/_signup-step-arrows.slim
@@ -10,13 +10,13 @@
   .arrow class=active_arrow?(step, 2)
     .content
       .title Step 2
-      label Business Info
+      label Contact Info
     .point.part
   
   .arrow class=active_arrow?(step, 3)
     .content
       .title Step 3
-      label Business Logo
+      label Site Logo
     .point.part
   
   .arrow class=active_arrow?(step, 4)
