--- a/app/views/signup/default/step-3.slim
+++ b/app/views/signup/default/step-3.slim
@@ -5,7 +5,7 @@
 
 = form_tag account_setup_path(3), :multipart => true, :id => 'account-setup-box', :class => 'center-box' do
   .content
-    h2 Upload your company's logo
+    h2 Upload Your Site's Logo
     
     table
       tr
