--- a/app/views/signup/default/step-1.slim
+++ b/app/views/signup/default/step-1.slim
@@ -2,16 +2,15 @@
 
 = form_tag account_setup_path(1), :id => 'account-setup-box', :class => 'center-box' do
   .content
-    h2 Fill out your Website Information
+    h2 Website Information
     
-    hr
-    h3 The Name of your Business:
+    h3 Site Name:
     - if @errors['title']
       p.error Invalid Title. Only lowercase characters (a-z), digits (0-9), and any of the characters _, $, (, ), +, and - are allowed.
     input type="text" name="step_data[title]" value="#{@data['title'] }"
     
     hr
-    h3 Your YoMobi Mobile Site URL:
+    h3 Choose a Mobile Site URL:
 
     - if @errors['site_url'] == 'illegal'
       p.error Illegal database name. Only lowercase characters (a-z), digits (0-9), and any of the characters _, $, (, ), +, and - are allowed.
@@ -23,13 +22,13 @@
     
     .site-url
       span http://www.yomobi.com/
-      input type="text" value="#{@data['site_url'] || 'my-business'}" name="step_data[site_url]"
+      input type="text" value="#{@data['site_url'] || 'my-name'}" name="step_data[site_url]"
     
     hr
-    h3 A short description about your business (optional):
+    h3 Tell your visitors who you are (optional):
     - if @errors['desc']
       p.error Description is too long. 2500 characters max.
-    textarea name="step_data[desc]" rows="10" = @data['desc']
+    textarea name="step_data[desc]" = @data['desc']
   .action-bar
     .rfloat.main-btn
       input.content type="submit" value="Save & Continue"
