--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -7,7 +7,7 @@ body {
   width: 320px;
   margin: 0 auto;
   overflow: hidden;
-  font-family: "lucida grande", tahoma, verdana, arial, sans-serif; }
+  font-family: Arial, Helvetica, sans-serif; }
 
 #canvas {
   position: relative;
@@ -26,10 +26,15 @@ body {
 
 .back-bar, .company-info {
   width: 304px;
-  height: 48px;
-  padding: 8px;
+  height: 40px;
+  padding: 0 8px;
   background: #3b5998;
   color: white; }
+  .back-bar .title, .company-info .title {
+    padding-top: 3px; }
+    .back-bar .title h3, .company-info .title h3 {
+      font-weight: bold;
+      font-size: 12px; }
 
 .company-info {
   padding-left: 4px;
@@ -77,17 +82,16 @@ body {
   float: left;
   width: 50px;
   height: 30px;
-  margin: 8px 8px 0 0;
+  margin: 4px 8px 0 0;
   background: url(/images/back-btn.png) no-repeat; }
 
 .title h2, .title h3 {
   margin: 9px 0 0 15px;
-  font-family: "lucida grande", tahoma, verdana, arial, sans-serif;
   font-weight: normal; }
 .title h2 {
   font-size: 24px; }
 .title h3 {
-  font-size: 18px; }
+  font-size: 1em; }
 
 .home-icon {
   float: left;
@@ -136,7 +140,7 @@ body {
     margin: 10px 0; }
 
 .page .content.category, .page .content.page_tree {
-  padding: 0; }
+  padding: 0 !important; }
   .page .content.category .item, .page .content.page_tree .item {
     padding: 8px 0 8px 12px;
     font-size: 18px; }
@@ -145,10 +149,10 @@ body {
       max-width: 290px; }
   .page .content.category .item.category, .page .content.category .item.leaf-name, .page .content.page_tree .item.category, .page .content.page_tree .item.leaf-name {
     cursor: pointer; }
-  .page .content.category .c0, .page .content.page_tree .c0 {
-    background: white; }
-  .page .content.category .c1, .page .content.page_tree .c1 {
-    background: #d8dfea; }
+  .page .content.category .c0, .page .content.category .c1, .page .content.page_tree .c0, .page .content.page_tree .c1 {
+    border-top: 1px solid #d2d2d2; }
+  .page .content.category .first, .page .content.page_tree .first {
+    border-top: none; }
   .page .content.category .subcat-arrow, .page .content.category .leaf-arrow, .page .content.page_tree .subcat-arrow, .page .content.page_tree .leaf-arrow {
     float: right;
     width: 29px;
