--- a/public/stylesheets/sass/app.sass
+++ b/public/stylesheets/sass/app.sass
@@ -4,7 +4,7 @@
 body
   margin: 0
   padding: 0
-  font-family: 'lucida grande', tahoma, verdana, arial, sans-serif
+  font-family: Arial, Helvetica, sans-serif
   font-size: 11px
 
 a, a:visited
