--- a/public/stylesheets/sass/signup.sass
+++ b/public/stylesheets/sass/signup.sass
@@ -147,15 +147,23 @@
   
 
 #account-setup-box
+  h2
+    margin: 5px 0px 15px 0px
+  h3
+    margin: 10px 0px 5px 0px
   width: 500px
   textarea, input[type=text]
-    width: 98%
-    font-size: 1.5em
+    width: 450px
+    font-size: 1.2em
+  input[type=text]
+    margin-bottom: 10px
+  textarea
+    height: 10em
   .site-url
     span
       font-size: 1.5em
     input
-      width: 200px
+      width: 270px
   a.skip-link
     padding: 3px 6px 0 0
   td.logo-preview
