Updated jquery from 1.5 to 1.6

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -28,6 +28,6 @@ html
         .clearfix
     
     = javascript_include_tag 'support/underscore'
-    = javascript_include_tag 'http://code.jquery.com/jquery-1.5.1.js'
+    = javascript_include_tag 'support/jquery-1.6.1.min'
     = javascript_include_tag 'notice'
     = yield :js
