--- a/app/views/layouts/mobile.slim
+++ b/app/views/layouts/mobile.slim
@@ -11,7 +11,7 @@ html
     
     = render 'shared/templates'
     
-    = javascript_include_tag 'http://code.jquery.com/jquery-1.5.1.js'
+    = javascript_include_tag 'support/jquery-1.6.1.min'
     / = javascript_include_tag 'support/jquery.animate-enhanced.min'
     = javascript_include_tag 'support/underscore'
     = javascript_include_tag 'support/backbone'
