--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -268,67 +268,49 @@
     width: 32px
     margin-right: 10px
     text-align: center
-    .checkbox
-      height: 32px
-      width: 32px
-      background: url(/images/ui/checkbox-empty.png)
-      cursor: pointer
-    .checkbox.checked
-      background: url(/images/ui/checkbox-full.png)
   .day-hours
-    display: none
-    padding: 8px 0
+    display: block
     clear: left
     .day-name
       float: left
-      width: 95px
-      font-size: 1.5em
+      width: 75px
       margin-top: 4px
-      padding: 4px 0 8px
-    .all-day-wrap
-      float: left
-      padding: 10px 0 0 12px
-      text-align: center
-      color: #4e4e4e
-    .row
-      clear: left
-    .add-time
-      float: right
-      clear: left
-      margin-top: 2px
-      cursor: pointer
-      .plus-icon
-        float: left
-        width: 16px
-        height: 16px
-        margin-top: -1px
-        background: url(/images/ui/plus.png)
-    .hour-wrap.all-day-checked
-      display: none
-    .all-day-label
-      display: none
-      float: left
-      height: 26px
-      width: 262px
-      padding: 10px 0 0 4px
-      color: #050
       font-size: 1.2em
-      font-weight: bold
-    .all-day-label.all-day-checked
-      display: block
-    label
+    .day-enabled input[type=checkbox]
+      margin-top: 6px
+    .times
+      // visible when day-hours has .checked class
+      visibility: hidden
       float: left
-      width: 36px
-      padding-right: 4px
-      margin-top: 11px
-      color: #7e7e7e
-      text-align: right
+      padding-left: 5px
+      label
+        float: left
+        width: 24px
+        margin-top: 4px
+        color: #7e7e7e
+        text-align: center
+      .t1
+        display: none
+    .all-day
+      // displays when day-hours has .checked class
+      visibility: hidden
+      span
+        float: left
+        padding: 4px 2px 0 8px
+      input[type=checkbox]
+        margin-top: 5px
     input[type=text]
       float: left
-      width: 80px
+      width: 65px
 
   .day-hours.checked
-    display: block
+    .times
+      visibility: visible
+    .all-day
+      visibility: visible
+  .day-hours.all-day
+    .times
+      visibility: hidden !important
 
 #builder .edit-area.calendar
   .url
