--- a/public/stylesheets/sass/app.sass
+++ b/public/stylesheets/sass/app.sass
@@ -139,6 +139,10 @@ p.success
   max-width: 270px
   font-size: 14px
 
+.hr
+  border-top: 1px solid #b3b3b3
+  padding-top: 14px
+
 .lfloat
   float: left
 
