--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -331,6 +331,13 @@
   .current_link_label
     font-size: 1.5em
 
+#builder .edit-area.gmap
+  p.invalidForShowing
+    padding: 7px
+    border: 1px solid #DD3C10
+    background: #FFEBE8
+    font-size: 14px
+
 #dialog-confirm
   .error
     color: #880000
