Made sure initial business type is saved to newly created company accounts

--- a/app/views/home/_signup_form.slim
+++ b/app/views/home/_signup_form.slim
@@ -17,7 +17,7 @@
   
   = f.label :business_type
   br
-  = f.select :business_type, options_for_select(business_types)
+  = f.select :company_type_id, options_for_select(company_types)
   br
   
   - unless hide_captcha
