Added default widgets to business types

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -15,197 +15,6 @@ window.widgetEditors = {};
 
 _.templateSettings.interpolate = /\{\{([^\{].*?)\}\}/g;
 
-bdata = [
-  {
-    name: "flickr",
-    wtype: 'link_fb',
-    helpText: "Add a one-tap link to your mobile Flickr page.",
-    host: 'http://m.flickr.com/photos/',
-    basename: 'flickr',
-    singleton: true
-  },
-  
-  {
-    name: "picasa",
-    wtype: 'link_fb',
-    helpText: "Add a one-tap link to your Picasa page.",
-    host: 'http://picasaweb.google.com/',
-    basename: 'picasa',
-    singleton: true
-  },
-
-  {
-    name: "blog",
-    wtype: 'link',
-    helpText: "Add a link from your YoMobi mobile website to your blog.",
-    singleton: true
-  },
-
-  {
-    name: "news",
-    wtype: 'link',
-    helpText: "Add a link from your YoMobi mobile website to your news webpage.",
-    singleton: true
-  },
-
-  {
-    name: "reviews",
-    wtype: 'link',
-    helpText: "Add a one-tap link to a website that has reviews of your business.",
-    singleton: true
-  },
-  
-  {
-    name: "call-me-back",
-    wtype: 'call_back',
-    helpText: "This widget allows your customers to request you to call them back.",
-    singleton: true
-  },
-
-  {
-    name: "home-listings",
-    wtype: 'category',
-    helpText: "Give your customers instant access to your real estate listings.",
-    singleton: true
-  },
-  
-  {
-    name: "twitter",
-    wtype: 'link_fb',
-    helpText: "Add a one-tap link to your businesses's Twitter page.",
-    host: 'http://twitter.com/',
-    basename: 'twitter',
-    singleton: true
-  },
-
-  {
-    name: "facebook",
-    wtype: 'link_fb',
-    helpText: "Add a one-tap link to your businesses's Facebook page.",
-    host: 'http://facebook.com/',
-    basename: 'facebook',
-    singleton: true
-  },
-
-  {
-    name: "category",
-    wtype: 'page_tree',
-    helpText: "Create your own mobile site map of custom pages."
-  },
-
-  {
-    name: "booking-request",
-    wtype: 'booking',
-    helpText: "Let your customers book a request through your Yomobi mobile website.",
-    singleton: true
-  },
-
-  {
-    name: "tell-a-friend",
-    wtype: 'tell_friend',
-    helpText: "This widget allows your customers to instantly email their friends about your mobile website.",
-    singleton: true
-  },
-
-  {
-    name: "leave-a-message",
-    wtype: 'leave_msg',
-    helpText: "Allow your customers to leave you an email message.",
-    singleton: true
-  },
-
-  {
-    name: "event-calendar",
-    wtype: 'link',
-    helpText: "Keep your customers up-to-date on your business's events.",
-    singleton: true
-  },
-
-  {
-    name: "custom-page",
-    wtype: 'custom_page',
-    helpText: "Write a page about whatever you like."
-  },
-
-  {
-    name: "photo-bucket",
-    wtype: 'link',
-    helpText: "Add a one-tap link to your PhotoBucket page.",
-    singleton: true
-  },
-
-  {
-    name: "keep-me-informed",
-    wtype: 'informed',
-    helpText: "This widget allows your customers to opt-in to receive email and sms notifications from you.",
-    singleton: true
-  },
-
-  {
-    name: "coupon",
-    wtype: 'coupon',
-    helpText: "Give your customers an incentive to choose your business."
-  },
-
-  {
-    name: "full-website",
-    wtype: 'link',
-    helpText: "Add a link from your YoMobi mobile website to your full website.",
-    singleton: true
-  },
-
-  {
-    name: "locations",
-    wtype: 'category',
-    helpText: "Give your customers instant access to your business's multiple locations.",
-    singleton: true
-  },
-
-  {
-    name: "business-hours",
-    wtype: 'hours',
-    helpText: "Let your customers know when you're open for business."
-  },
-
-  {
-    name: "services",
-    wtype: 'category',
-    helpText: "Give your customers instant access to your list of services.",
-    singleton: true
-  },
-
-  {
-    name: "products",
-    wtype: 'category',
-    helpText: "Give your customers instant access to your list of products.",
-    singleton: true
-  },
-
-  {
-    name: "menu",
-    wtype: 'category',
-    helpText: "Give your customers instant access to your restaurant's cuisine.",
-    singleton: true
-  },
-
-  {
-    name: "call-us",
-    wtype: 'phone',
-    helpText: "Add a number for one-click calling."
-  },
-
-  {
-    name: "find-us",
-    wtype: 'gmap',
-    helpText: "Show your customers a map of where your business is located."
-  },
-
-  {
-    name: "about-us",
-    wtype: 'custom_page',
-    helpText: "A page describing what your business is about.",
-    singleton: true
-  }
-];
+bdata = <%= raw widget_docs %>;
 
 </script>
