Attempt at google adsense

--- a/app/views/shared/_mobile-data-loader.html.erb
+++ b/app/views/shared/_mobile-data-loader.html.erb
@@ -1,5 +1,13 @@
 <script type="text/javascript" charset="utf-8">
 
+// adsense
+window.googleAfmcRequest = {
+  client: 'ca-mb-pub-2309168908133247',
+  format: '320x50_mb',
+  output: 'html',
+  slotname: '7752788998',
+};
+
 // global variables
 window.g = {
   width: 320,
