More adsense attempts

--- a/app/views/shared/_mobile-render.slim
+++ b/app/views/shared/_mobile-render.slim
@@ -10,7 +10,14 @@
         td.wtab
         td.wtab
   .ad-bar
-    h1 hi
+    javascript:
+      window.googleAfmcRequest = {
+        client: 'ca-mb-pub-2309168908133247',
+        format: '320x50_mb',
+        output: 'html',
+        slotname: '7752788998'
+      };
+    script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_afmc_ads.js"
 #canvas
   #home.page
     #home-widgets.content.dbx-group
