--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -151,7 +151,7 @@
         .back-btn
         .title
       .content
-      .ad-bar {{ adHtml }}
+      .ad-bar
   
   #dialog-invalid-drag title="Oops"
     p
